TEK-474 Need to prevent the overflow from increasing the page width so the overflow must be hidden from the .page class

--- a/assets/clerk_product.css
+++ b/assets/clerk_product.css
@@ -1,3 +1,6 @@
+.page {
+    overflow: hidden;
+}
 .clerk_content_wrap * {
     font-family: inherit;
     transition:height 0.3s ease;
